Fix input error border on mobile

--- a/components/CallToActionInput/index.module.scss
+++ b/components/CallToActionInput/index.module.scss
@@ -21,6 +21,10 @@
 
       .emailWrapper {
         padding: 0 23px;
+
+        @media (max-width: $mobile-width) {
+          padding: 0 15px;
+        }
       }
     }
 
